; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_notes.c_parse_msg_arg.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_notes.c_parse_msg_arg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.option = type { %struct.note_data* }
%struct.note_data = type { i32, %struct.TYPE_5__ }
%struct.TYPE_5__ = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.option*, i8*, i32)* @parse_msg_arg to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @parse_msg_arg(%struct.option* %0, i8* %1, i32 %2) #0 {
  %4 = alloca %struct.option*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.note_data*, align 8
  store %struct.option* %0, %struct.option** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load %struct.option*, %struct.option** %4, align 8
  %9 = getelementptr inbounds %struct.option, %struct.option* %8, i32 0, i32 0
  %10 = load %struct.note_data*, %struct.note_data** %9, align 8
  store %struct.note_data* %10, %struct.note_data** %7, align 8
  %11 = load i32, i32* %6, align 4
  %12 = call i32 @BUG_ON_OPT_NEG(i32 %11)
  %13 = load %struct.note_data*, %struct.note_data** %7, align 8
  %14 = getelementptr inbounds %struct.note_data, %struct.note_data* %13, i32 0, i32 1
  %15 = load i8*, i8** %5, align 8
  %16 = call i64 @strlen(i8* %15)
  %17 = add nsw i64 %16, 2
  %18 = call i32 @strbuf_grow(%struct.TYPE_5__* %14, i64 %17)
  %19 = load %struct.note_data*, %struct.note_data** %7, align 8
  %20 = getelementptr inbounds %struct.note_data, %struct.note_data* %19, i32 0, i32 1
  %21 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %20, i32 0, i32 0
  %22 = load i64, i64* %21, align 8
  %23 = icmp ne i64 %22, 0
  br i1 %23, label %24, label %28

24:                                               ; preds = %3
  %25 = load %struct.note_data*, %struct.note_data** %7, align 8
  %26 = getelementptr inbounds %struct.note_data, %struct.note_data* %25, i32 0, i32 1
  %27 = call i32 @strbuf_addch(%struct.TYPE_5__* %26, i8 signext 10)
  br label %28

28:                                               ; preds = %24, %3
  %29 = load %struct.note_data*, %struct.note_data** %7, align 8
  %30 = getelementptr inbounds %struct.note_data, %struct.note_data* %29, i32 0, i32 1
  %31 = load i8*, i8** %5, align 8
  %32 = call i32 @strbuf_addstr(%struct.TYPE_5__* %30, i8* %31)
  %33 = load %struct.note_data*, %struct.note_data** %7, align 8
  %34 = getelementptr inbounds %struct.note_data, %struct.note_data* %33, i32 0, i32 1
  %35 = call i32 @strbuf_stripspace(%struct.TYPE_5__* %34, i32 0)
  %36 = load %struct.note_data*, %struct.note_data** %7, align 8
  %37 = getelementptr inbounds %struct.note_data, %struct.note_data* %36, i32 0, i32 0
  store i32 1, i32* %37, align 8
  ret i32 0
}

declare dso_local i32 @BUG_ON_OPT_NEG(i32) #1

declare dso_local i32 @strbuf_grow(%struct.TYPE_5__*, i64) #1

declare dso_local i64 @strlen(i8*) #1

declare dso_local i32 @strbuf_addch(%struct.TYPE_5__*, i8 signext) #1

declare dso_local i32 @strbuf_addstr(%struct.TYPE_5__*, i8*) #1

declare dso_local i32 @strbuf_stripspace(%struct.TYPE_5__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
